--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -16,4 +16,20 @@ body {
           flex-direction: row;
   gap: 2em;
 }
+
+.work-in-progress {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  background-color: white;
+  color: black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
 /*# sourceMappingURL=styles.css.map */
