--- a/src/Styles/styles.scss
+++ b/src/Styles/styles.scss
@@ -14,3 +14,15 @@ body {
     flex-direction: row;
     gap: 2em;
 }
+
+.work-in-progress {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    background-color: white;
+    color: black;
+    display: flex;
+    justify-content: center;
+}
