--- a/src/Components/Home/styles.css
+++ b/src/Components/Home/styles.css
@@ -14,7 +14,7 @@
   padding: 0;
 }
 
-.mycontainer {
+.intro {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -23,9 +23,95 @@
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 1em;
-  height: calc(100vh - 55px);
+  height: 100vh;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+}
+
+.home-page {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.svg-graphic {
+  height: 100vh;
+}
+
+.svg-text {
+  font-size: 10px;
+}
+
+.svg-top-line {
+  -webkit-animation: dropLine 0.5s ease forwards;
+          animation: dropLine 0.5s ease forwards;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.svg-circle {
+  stroke-dasharray: 95;
+  stroke-dashoffset: 95;
+  -webkit-animation: rotate 1s linear forwards 0.5s;
+          animation: rotate 1s linear forwards 0.5s;
+  -webkit-transform: rotate(268deg);
+          transform: rotate(268deg);
+  transform-box: fill-box;
+  -webkit-transform-origin: center;
+          transform-origin: center;
+}
+
+.svg-bottom-line {
+  -webkit-animation: dropLine2 1s ease forwards 1.5s;
+          animation: dropLine2 1s ease forwards 1.5s;
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+}
+
+@-webkit-keyframes dropLine {
+  to {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@keyframes dropLine {
+  to {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@-webkit-keyframes dropLine2 {
+  to {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@keyframes dropLine2 {
+  to {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@-webkit-keyframes rotate {
+  from {
+    stroke-dashoffset: 95;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+@keyframes rotate {
+  from {
+    stroke-dashoffset: 95;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
