added home animation

--- a/src/Styles/styles.scss
+++ b/src/Styles/styles.scss
@@ -3,7 +3,7 @@
 @import "./variables";
 
 body {
-    font-family: $header-font, Serif;
+    font-family: $main-font, Serif;
     color: $text-color;
     background-color: $background;
     margin: 0;
