--- a/src/Components/Home/styles.css
+++ b/src/Components/Home/styles.css
@@ -1,15 +1,26 @@
-.hello {
-  font-size: large;
+.japanese {
+  font-size: 1em;
+  padding: 0;
+  font-weight: bold;
+}
+
+.icon {
+  color: #ffffff;
+  opacity: 0.4;
+}
+
+.english {
+  font-size: 1em;
   padding: 0;
 }
 
 .name {
-  font-size: 5em;
+  font-size: 3em;
   padding: 0;
 }
 
 .software-developer {
-  font-size: 7em;
+  font-size: 5em;
   opacity: 0.3;
   padding: 0;
 }
@@ -18,15 +29,21 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-flex: 2;
+      -ms-flex-positive: 2;
+          flex-grow: 2;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 1em;
   height: 100vh;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 .home-page {
@@ -40,7 +57,7 @@
 }
 
 .svg-text {
-  font-size: 10px;
+  font-size: 1px;
 }
 
 .svg-top-line {
