--- a/src/Components/Home/styles.scss
+++ b/src/Components/Home/styles.scss
@@ -1,25 +1,43 @@
-.hello {
-    font-size: large;
+@import '../../Styles/variables';
+
+.japanese {
+    font-size: 1em;
+    padding: 0;
+    font-weight: bold;
+}
+
+.icon {
+    color: $text-color;
+    opacity: 0.4;
+}
+
+.english {
+    font-size: 1em;
     padding: 0;
 }
 
 .name {
-    font-size: 5em;
+    font-size: 3em;
     padding: 0;
 }
 
 .software-developer {
-    font-size: 7em;
+    font-size: 5em;
     opacity: 0.3;
     padding: 0;
 }
 
 .intro {
     display: flex;
+    flex-grow: 2;
     flex-direction: column;
     gap: 1em;
     height: 100vh;
-    justify-content: flex-end;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.graphic {
 }
 
 .home-page {
@@ -31,7 +49,7 @@
 }
 
 .svg-text {
-    font-size: 10px;
+    font-size: 1px;
 }
 
 .svg-top-line {
