--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Press+Start+2P");
 body {
-  font-family: "Press Start 2P", Serif;
+  font-family: "Poppins", Serif;
   color: #ffffff;
   background-color: #111111;
   margin: 0;
