--- a/src/Components/Home/styles.css
+++ b/src/Components/Home/styles.css
@@ -29,6 +29,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 50%;
   -webkit-box-flex: 2;
       -ms-flex-positive: 2;
           flex-grow: 2;
@@ -46,14 +47,58 @@
           align-items: flex-start;
 }
 
+.graphic {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100vh;
+  width: 50%;
+}
+
+.top-line {
+  width: 50%;
+  height: 30%;
+  border-right: solid 6px white;
+}
+
+.bottom-line {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  width: 50%;
+  border-right: solid 6px white;
+}
+
+.circle {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 auto;
+  height: 15vw;
+  width: 15vw;
+  border: solid 6px white;
+  border-radius: 50%;
+}
+
 .home-page {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-.svg-graphic {
-  height: 100vh;
+  width: 100%;
 }
 
 .svg-text {
