--- a/src/Styles/_typography.scss
+++ b/src/Styles/_typography.scss
@@ -1,4 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
+@import url('https://fonts.googleapis.com/css?family=Orbitron');
+@import url('https://fonts.googleapis.com/css?family=Poppins');
+// @import url('https://fonts.googleapis.com/css?family=Noto+Sans+Japanese');
 
-$header-font: "Press Start 2P";
-$main-font: "Poppins"
+$header-font: "Orbitron";
+$main-font: "Poppins";
+$japanese-font: "Noto Sans Japanese";
