--- a/src/Components/Home/styles.css
+++ b/src/Components/Home/styles.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Orbitron");
+@import url("https://fonts.googleapis.com/css?family=Poppins");
 .japanese {
   font-size: 1em;
   padding: 0;
@@ -15,20 +17,37 @@
 }
 
 .name {
-  font-size: 3em;
+  font-size: clamp(1rem, 8vw, 4rem);
   padding: 0;
+  margin: 0;
 }
 
 .software-developer {
-  font-size: 5em;
-  opacity: 0.3;
+  word-wrap: none;
+  font-size: clamp(1rem, 8vw, 4rem);
+  color: #747474;
   padding: 0;
+  margin: 0;
+}
+
+.char {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.char:hover {
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
 }
 
 .intro {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  gap: 0.5em;
   width: 50%;
   -webkit-box-flex: 2;
       -ms-flex-positive: 2;
@@ -37,7 +56,6 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  gap: 1em;
   height: 100vh;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -45,6 +63,19 @@
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
+  font-family: "Orbitron";
+  padding-left: 5%;
+}
+
+@media (max-width: 1200px) {
+  .intro {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .graphic {
@@ -57,6 +88,12 @@
           flex-direction: column;
   height: 100vh;
   width: 50%;
+}
+
+@media (max-width: 1200px) {
+  .graphic {
+    display: none;
+  }
 }
 
 .top-line {
@@ -99,6 +136,8 @@
   display: -ms-flexbox;
   display: flex;
   width: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 .svg-text {
