--- a/src/Components/Nav/styles.css
+++ b/src/Components/Nav/styles.css
@@ -1,5 +1,4 @@
 nav {
-  height: 100vh;
   background-color: #5c5c5c;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -11,7 +10,7 @@ nav {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  padding: 0;
+  padding: 1em 0 0 0;
   margin: 0;
   list-style-type: none;
 }
