--- a/src/Components/TextSwap/styles.css
+++ b/src/Components/TextSwap/styles.css
@@ -1,1 +1,10 @@
-/* No CSS *//*# sourceMappingURL=styles.css.map */
+h3 {
+  padding: 0;
+  margin: 0;
+  color: #747474;
+}
+
+div {
+  padding: 0;
+}
+/*# sourceMappingURL=styles.css.map */
