--- a/src/Components/Nav/styles.css
+++ b/src/Components/Nav/styles.css
@@ -3,6 +3,7 @@ nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  height: calc(100vh - 1em);
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
