--- a/src/Components/Nav/styles.scss
+++ b/src/Components/Nav/styles.scss
@@ -3,6 +3,7 @@
 nav {
     background-color: $nav-color;
     display: flex;
+    height: calc(100vh - 1em);
     flex-direction: column;
     justify-content: flex-start;
     padding: 1em 0 0 0;
