added page transitions

--- a/src/Components/Home/styles.css
+++ b/src/Components/Home/styles.css
@@ -20,6 +20,7 @@
   font-size: clamp(1rem, 8vw, 4rem);
   padding: 0;
   margin: 0;
+  text-shadow: 6px 6px 0px #464646;
 }
 
 .software-developer {
@@ -139,6 +140,7 @@
   width: 100%;
   padding: 0;
   margin: 0;
+  overflow: hidden;
 }
 
 .svg-text {
