--- a/src/Components/Home/styles.scss
+++ b/src/Components/Home/styles.scss
@@ -24,6 +24,8 @@
         4rem);;
     padding: 0;
     margin: 0;
+    text-shadow: 6px 6px 0px rgb(70, 70, 70);
+    
 }
 
 .software-developer {
@@ -103,6 +105,7 @@
     width: 100%;
     padding: 0;
     margin: 0;
+    overflow: hidden;
 }
 
 
