--- a/src/Components/Nav/styles.scss
+++ b/src/Components/Nav/styles.scss
@@ -5,16 +5,29 @@ nav {
     display: flex;
     height: calc(100vh - 1em);
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-between;
     padding: 1em 0 0 0;
     margin: 0;
-    list-style-type: none;    
 }
 
-.links {
+.link {
     color:  white;
-    padding: 1em;
+    padding: 0 1em;
     &:hover {
         opacity: 0.6;
     }
+}
+
+.links {
+    display: flex;
+    gap: 2em;
+    flex-direction: column;
+    list-style-type: none;
+}
+.socials {
+    display: flex;
+    gap: 0.5em;
+    flex-direction: column;
+    list-style-type: none;
+
 }
