--- a/src/Components/Nav/styles.css
+++ b/src/Components/Nav/styles.css
@@ -1,9 +1,9 @@
-nav {
+.non-mobile {
   background-color: #5c5c5c;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: calc(100vh - 1em);
+  height: 100vh;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -11,8 +11,44 @@ nav {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 1em 0 0 0;
   margin: 0;
+}
+
+@media (max-width: 599px) {
+  .non-mobile {
+    display: none;
+  }
+}
+
+.mobile {
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.mobile button {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 1em;
+  cursor: pointer;
+}
+
+.mobile button:hover {
+  opacity: 0.5;
+}
+
+@media (max-width: 599px) {
+  .mobile {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 .link {
@@ -25,6 +61,7 @@ nav {
 }
 
 .links {
+  padding: 2em 0 0 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -46,5 +83,62 @@ nav {
       -ms-flex-direction: column;
           flex-direction: column;
   list-style-type: none;
+}
+
+.drawer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  background-color: #ffffff;
+  z-index: 1000;
+}
+
+.drawer button {
+  color: black;
+}
+
+.mobile-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  width: 100%;
+  gap: 1em;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.mobile-link {
+  color: black;
+  text-decoration: none;
+  font-size: 1.5em;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.mobile-link:hover {
+  opacity: 0.4;
 }
 /*# sourceMappingURL=styles.css.map */
