--- a/src/Styles/_typography.scss
+++ b/src/Styles/_typography.scss
@@ -3,5 +3,4 @@
 // @import url('https://fonts.googleapis.com/css?family=Noto+Sans+Japanese');
 
 $header-font: "Orbitron";
-$main-font: "Poppins";
-$japanese-font: "Noto Sans Japanese";
+$main-font: "Orbitron";
