--- a/src/Styles/_variables.scss
+++ b/src/Styles/_variables.scss
@@ -1,4 +1,6 @@
 $background: #111111;
+$secondary-background: #353535;
 $text-color: #ffffff;
+$outline-color: #9b9b9b;
 $nav-color: #5c5c5c;
 $secondary-text: #747474;
