--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Orbitron");
 @import url("https://fonts.googleapis.com/css?family=Poppins");
 body {
-  font-family: "Poppins", Serif;
+  font-family: "Orbitron", Serif;
   color: #ffffff;
   background-color: #111111;
   margin: 0;
