--- a/src/Components/Home/styles.module.scss
+++ b/src/Components/Home/styles.module.scss
@@ -23,7 +23,7 @@
     
 }
 
-.software-developer {
+.softwareDeveloper {
     word-wrap: none;
     font-size: clamp(1rem,
     8vw,
@@ -76,13 +76,13 @@
     overflow: hidden;
 }
 
-.top-line {
+.topLine {
     width: 50%;
     height: 30%;
     border-right: solid 6px white;
 }
 
-.bottom-line {
+.bottomLine {
     flex-grow: 1;
     width: 50%;
     border-right: solid 6px white;
@@ -100,7 +100,7 @@
     border-radius: 50%;
 }
 
-.home-page {
+.homePage {
     display: flex;
     width: 100%;
     padding: 0;
@@ -108,47 +108,23 @@
     overflow: hidden;
 }
 
+// @keyframes dropLine {
+//     to {
+//         transform: translateY(0)
+//     }
+// };
 
-.svg-text {
-    font-size: 1px;
-}
+// @keyframes dropLine2 {   
+//     to {
+//         transform: translateY(0)
+//     }
+// };
 
-.svg-top-line {
-    animation: dropLine 0.5s ease forwards;
-    transform: translateY(-50%)
-}
-
-.svg-circle {
-        stroke-dasharray: 95;
-        stroke-dashoffset: 95;
-        animation: rotate 1s linear forwards 0.5s;
-        transform: rotate(268deg);
-        transform-box: fill-box;
-        transform-origin: center;
-}
-
-.svg-bottom-line {
-    animation: dropLine2 1s ease forwards 1.5s;
-    transform: translateY(100%)
-}
-
-@keyframes dropLine {
-    to {
-        transform: translateY(0)
-    }
-};
-
-@keyframes dropLine2 {   
-    to {
-        transform: translateY(0)
-    }
-};
-
-@keyframes rotate {
-    from {
-        stroke-dashoffset: 95;
-    }
-    to {
-        stroke-dashoffset: 0;
-    }
-}
+// @keyframes rotate {
+//     from {
+//         stroke-dashoffset: 95;
+//     }
+//     to {
+//         stroke-dashoffset: 0;
+//     }
+// }
