--- a/src/Components/Nav/styles.module.scss
+++ b/src/Components/Nav/styles.module.scss
@@ -1,7 +1,7 @@
 @import '../../Styles/variables';
 @import "../../Styles/mixins";
 
-.non-mobile {
+.nonMobile {
     background-color: $nav-color;
     display: flex;
     height: 100vh;
@@ -75,7 +75,7 @@
     }
 }
 
-.mobile-links {
+.mobileLinks {
     display: flex;
     flex-grow: 1;
     width: 100%;
@@ -85,7 +85,7 @@
     align-items: center;
 }
 
-.mobile-link {
+.mobileLink {
     color: black;
     text-decoration: none;
     font-size: 1.5em;
