--- a/src/Components/Nav/styles.module.css
+++ b/src/Components/Nav/styles.module.css
@@ -3,6 +3,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 50px;
   height: 100vh;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -11,7 +12,8 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin: 0;
+  margin-right: 50px;
+  position: fixed;
 }
 
 @media (max-width: 599px) {
