--- a/src/Components/Projects/styles.module.scss
+++ b/src/Components/Projects/styles.module.scss
@@ -1,3 +1,12 @@
+@import "../../Styles/mixins";
+
 .projectsPage {
     padding: 1em;    
+    margin: 1em;
+    display: flex;
+    justify-content: center;
+}
+
+.card {
+    @include make-card;
 }
