--- a/src/Styles/_animations.scss
+++ b/src/Styles/_animations.scss
@@ -17,3 +17,20 @@
         opacity: 0;
     }
 }
+
+@keyframes bounce {
+    0% {
+        transform: translateY(-25%);
+        animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+    }    
+
+    50% {
+        transform: translateY(0);
+        animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+    }
+
+    100% {
+        transform: translateY(-25%);
+        animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+    }
+}
