--- a/src/Components/Home/styles.module.scss
+++ b/src/Components/Home/styles.module.scss
@@ -111,8 +111,7 @@
 
 .enter {
     position: absolute;
-    padding-bottom: 10vh;
-    bottom: 0;
+    bottom: 20vh;
     left: 50%;
     transform: translateX(-50%);
     animation: bounce 1s infinite;
