--- a/src/Components/Projects/styles.module.scss
+++ b/src/Components/Projects/styles.module.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
 }
 
-h1, h2 {
+h1 {
     text-align: center;
 }
 
@@ -18,12 +18,12 @@ ul {
 }
 
 li {
-    div {
+    padding: .3em 0;
+    
+    &:hover {
         background-color: $tertiary-background;
-        &:hover {
-            opacity: 0.5;
-        }
-    }    
+        opacity: 0.5;
+    }
 }
 
 .projectPanel {
@@ -47,10 +47,11 @@ li {
     flex-direction: column;
     flex-grow: 1;
     max-height: 50%;
+    background-color: $tertiary-background;
 }
 
 .card {
-    @include make-card;
+    @include make-card(1.5em);
 }
 
 // div {
