--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -36,4 +36,16 @@ body {
 .App ::selection {
   background: #AFAFAF;
 }
+
+button {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 1em;
+  cursor: pointer;
+}
+
+button:hover {
+  opacity: 0.5;
+}
 /*# sourceMappingURL=styles.css.map */
