--- a/src/Components/Projects/styles.module.scss
+++ b/src/Components/Projects/styles.module.scss
@@ -7,11 +7,18 @@
 }
 
 .projectPanel {
-    margin: 1.5em;
+    margin: 2em auto;
+    max-width: 1200px;
+    
 }
 
 h1 {
     text-align: center;
+}
+
+a {
+    color: $text-color;
+    text-decoration: none;
 }
 
 ul {
@@ -32,4 +39,8 @@ li {
     display: flex;
     flex-direction: column;
     @include make-card(1.5em);
+}
+
+.carousel {
+    width: 100%;
 }
