--- a/src/Components/Projects/styles.module.css
+++ b/src/Components/Projects/styles.module.css
@@ -4,11 +4,17 @@
 }
 
 .projectPanel {
-  margin: 1.5em;
+  margin: 2em auto;
+  max-width: 1200px;
 }
 
 h1 {
   text-align: center;
+}
+
+a {
+  color: #ffffff;
+  text-decoration: none;
 }
 
 ul {
@@ -37,5 +43,9 @@ li:hover {
   padding: 1.5em;
   background-color: #353535;
   border-radius: 5px;
+}
+
+.carousel {
+  width: 100%;
 }
 /*# sourceMappingURL=styles.module.css.map */
