--- a/src/Components/Projects/styles.module.scss
+++ b/src/Components/Projects/styles.module.scss
@@ -7,7 +7,7 @@
 }
 
 .projectPanel {
-    margin: 2em auto;
+    margin: 2em;
     max-width: 1200px;
     
 }
@@ -43,4 +43,12 @@ li {
 
 .carousel {
     width: 100%;
+}
+
+.slideImg {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: auto;
+    object-fit: cover;
 }
