--- a/src/Components/Projects/styles.module.css
+++ b/src/Components/Projects/styles.module.css
@@ -5,7 +5,13 @@
 
 .projectPanel {
   margin: 2em;
-  max-width: 1200px;
+  max-width: 1000px;
+}
+
+@media (min-width: 1200px) {
+  .projectPanel {
+    margin: 2em auto;
+  }
 }
 
 h1 {
